WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
178025
RootInlineBox should not hold a collection of raw pointers to RenderBox
https://bugs.webkit.org/show_bug.cgi?id=178025
Summary
RootInlineBox should not hold a collection of raw pointers to RenderBox
alan
Reported
2017-10-06 13:03:05 PDT
There's already some assertions in place to check if the renderers are valid.
Attachments
Patch
(6.17 KB, patch)
2017-10-06 13:08 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-10-06 13:03:37 PDT
<
rdar://problem/34862488
>
alan
Comment 2
2017-10-06 13:08:02 PDT
Created
attachment 323039
[details]
Patch
WebKit Commit Bot
Comment 3
2017-10-06 15:14:08 PDT
Comment on
attachment 323039
[details]
Patch Clearing flags on attachment: 323039 Committed
r223004
: <
http://trac.webkit.org/changeset/223004
>
WebKit Commit Bot
Comment 4
2017-10-06 15:14:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug