RootInlineBox should not hold a collection of raw pointers to RenderBox https://bugs.webkit.org/show_bug.cgi?id=178025 <rdar://problem/34862488>

Reviewed by Simon Fraser.

There are already some assertions in place to check if the renderers are valid.

Covered by existing test cases.

* rendering/RenderBlockLineLayout.cpp:
(WebCore::RenderBlockFlow::reattachCleanLineFloats):
(WebCore::RenderBlockFlow::determineStartPosition):
(WebCore::RenderBlockFlow::determineEndPosition):
* rendering/RootInlineBox.h:
(WebCore::RootInlineBox::appendFloat):
(WebCore::RootInlineBox::floatsPtr):


Canonical link: https://commits.webkit.org/194275@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@223004 268f45cc-cd09-0410-ab3c-d52691b4dbfc